# xmz-gui

./: .gitignore  .travis.yml  Cargo.toml  README.md  xmz-gui.toml.example
ci/: build.sh
res/: app.css  main_window.glade
src/: app.rs  main.rs  settings.rs  static_resources.rs
xmz-client/: Cargo.toml
xmz-client/src/: error.rs  globals.rs  lib.rs  types.rs  utils.rs
xmz-client/src/backend/: mod.rs  register.rs  sync.rs  types.rs
xmz-client/src/model/: server.rs
xmz-gtk/: Cargo.toml
xmz-gtk/res/: resources.xml
